--- a/Views/Home/LoginPartial.cshtml
+++ b/Views/Home/LoginPartial.cshtml
@@ -32,7 +32,7 @@
     </script>
 </header>
  <body>
-  <a data-toggle="modal" data-target="#myModal">Login</a>
+  <a data-toggle="modal" data-target="#myModal">Already Registered? Sign in here</a>
 <!-- <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Login</button> -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
