--- a/Views/Home/ProjectInfo.cshtml
+++ b/Views/Home/ProjectInfo.cshtml
@@ -1,58 +1,12 @@
-<header>
-    <script type="text/javascript">
-        $().ready(function () {
-            $("#formEdit").validate();
-        }
-        );
- 
-        function postData() {
-        var form = $("#formEdit");
-            if (!form.valid()) 
-            {
-               alert("The data are not valid");
-            }
-            else
-                form.post();
-        }
-    </script>
- 
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
 <body>
-<div>
-  <form runat="server" id="form1">
- 
-  <!-- Button trigger modal -->
-    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-      Launch demo modal
-    </button>
-  </form>
- 
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-        </div>
-        <div class="modal-body">
-           <form id="formEdit">
-              <div class="form-group">
-                  <label for="roomName">Titolo</label>
-                  <input id="roomName" type="text" class="form-control" placeholder="Titolo della Sala"
-                      runat="server" required/>
-   
-                  ...
-   
-              </div>
-           </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" onclick="postData()">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  sup
 </body>
+</html>
