--- a/wwwroot/css/Index.css
+++ b/wwwroot/css/Index.css
@@ -94,3 +94,81 @@ body {
     padding: .8rem 1.5rem;
     font-size: 1.1rem;
 }
+
+/* Features Section */
+.narrow {
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 2rem;
+  }
+  .btn-sm {
+    border-width: medium;
+    border-radius: 0;
+    padding: .5rem 1.1rem;
+    font-size: .9rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 1rem;
+  }
+  .btn-turquoise {
+    border-color: #1EBBA3;
+    background-color: #1EBBA3;
+    color: white;
+  }
+  .btn-turquoise:hover,
+  .btn-turquoise:focus {
+    border-color: #189582;
+    background-color: #189582;
+    color: white;
+  }
+  .jumbotron {
+    margin-bottom: 0;
+    border-radius: 0;
+    padding: 1rem 0 3rem;
+  }
+  h3.heading {
+    font-size: 1.9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 1.9rem;
+  }
+  .heading-underline {
+    width: 3rem;
+    height: .2rem;
+    background-color: #1EBBA3;
+    margin: 0 auto 2rem;
+  }
+  .feature {
+    text-align: center;
+  }
+  .feature .fa-layers {
+    color: #1EBBA3;
+    margin: 0 auto;
+    width: 3.9rem;
+    height: 6rem;
+  }
+  .feature h3 {
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    padding-bottom: .4rem;
+  }
+  .feature p {
+    font-size: 1.1rem;
+  }
+
+  /*===== FIXED BACKGROUND IMG DARK =====*/
+
+#fixed {
+    background-image: url('http://via.placeholder.com/1500x1000');
+    z-index: -1;
+  }
+  .dark {
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 7rem 2rem;
+    text-align: center;
+    z-index: 1000!important;
+  }
+  .dark h3, .dark p {
+    color: #E9ECEF;
+  }
