--- a/Views/Teacher/TeachDashboard.cshtml
+++ b/Views/Teacher/TeachDashboard.cshtml
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome Teacher!!</h1>
+    <h1>Welcome @Model.LoggedInUser.FirstName!!</h1>
     <a href="/logout">Logout</a>
     <partial name="ProjectPartial">
     <table class="table table-hover">
@@ -26,7 +26,7 @@
         @foreach(Project proj in @Model.AllProjects){
           <tr>
             <th scope="row"><a href="">@proj.Name</a></th>
-            <td>@proj.GoalAmount</td>
+            <td>$@proj.GoalAmount.ToString("0.00")</td>
             <td>@proj.CreatedAt.ToString("MMMM dd, yyyy")</td>
             <td>@proj.EndDate</td>
             <td>@proj.Donations.Count</td>
