--- a/Views/Donor/DonorAllProjects.cshtml
+++ b/Views/Donor/DonorAllProjects.cshtml
@@ -10,29 +10,31 @@
 </head>
 <body>
     <div>
-        <h2>Hi @Model.LoggedInUser.FirstName</h2>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                <th scope="col">Project Name</th>
-                <th scope="col">Goal</th>
-                <th scope="col">Created Date</th>
-                <th scope="col">End Date</th>
-                <th scope="col"># of Donors</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach(Project proj in @Model.AllProjects){
-                <tr>
-                    <th scope="row"><a asp-action="ProjectInfo" asp-controller="Donor" asp-route-ProjectID="@proj.ProjectId">@proj.Name</a></th>
-                    <td>$@Math.Round(@proj.GoalAmount, 2)</td>
-                    <td>@proj.CreatedAt.ToString("MMMM dd, yyyy")</td>
-                    <td>@proj.EndDate.ToString("MMMM dd, yyyy")</td>
-                    <td>@proj.Donations.Count</td>
-                </tr>
-                }
-            </tbody>
-        </table>
+        <partial name="DonorNavPartial" view-data="ViewData"/>
+        <div class="container">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                    <th scope="col">Project Name</th>
+                    <th scope="col">Goal</th>
+                    <th scope="col">Start Date</th>
+                    <th scope="col">End Date</th>
+                    <th scope="col"># of Contributions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach(Project proj in @Model.AllProjects){
+                    <tr>
+                        <th scope="row"><a asp-action="ProjectInfo" asp-controller="Donor" asp-route-ProjectID="@proj.ProjectId">@proj.Name</a></th>
+                        <td>$@Math.Round(@proj.GoalAmount, 2)</td>
+                        <td>@proj.CreatedAt.ToString("MMMM dd, yyyy")</td>
+                        <td>@proj.EndDate.ToString("MMMM dd, yyyy")</td>
+                        <td>@proj.Donations.Count</td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
