--- a/Views/Teacher/TeachDashboard.cshtml
+++ b/Views/Teacher/TeachDashboard.cshtml
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome Teacher!!</h1>
+    <h1>Welcome @Model.LoggedInUser.FirstName!!</h1>
     <a href="/logout">Logout</a>
     <partial name="ProjectPartial">
     <table class="table table-hover">
