Undo animations, added second static pic

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -63,21 +63,21 @@
         <!------------------ END Landing page Image --------------------------------->
 
         <!--------------------- Landing Page Slogan / Overlay ---------------------------->
-<div class="caption text-center">
+              <div class="caption text-center">
+                    <h1 style="color:white;">Some Slogan should be here!</h1>
+                    <h3 style="color:white;">Why Can't I see this?????</h3>
+                    <button class="btn btn-outline-light btn-lg">SHOW UP</button>
 
-	<div class="os-animation" data-animation="bounceInUp" data-delay=".6s">
-		<h1>Welcome to Nuno</h1>
-	</div>
-
-	<div class="os-animation" data-animation="bounceInUp" data-delay=".8s">
-		<h3>Animated Bootstrap Theme</h3>
-	</div>
-			
-	<div class="os-animation" data-animation="bounceInUp" data-delay="1s">
-		<a class="btn btn-outline-light btn-lg" href="#features">Get Started</a>
-	</div>
-
-</div>
+                <div class="os-animation" data-animation="bounceInUp" data-delay=".6s">
+                    <h1 style="color:white;">Some Slogan should be here!</h1>
+                </div>
+                <div class="os-animation" data-animation="" data-delay="">
+                  <h3>Why Can't I see this?????</h3>
+                </div>
+                <div class="os-animation" data-animation="" data-delay="">
+                  <button class="btn btn-outline-light btn-lg">SHOW UP</button>
+                </div>
+              </div>
 
 
         <!-- End Landing Page Slogan -->
