--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#feature">Featured Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#mission">Misson</a>
+                    <a class="nav-link" href="#mission">Mission</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contribute">Contribute</a>
