--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -218,7 +218,7 @@
 				<i class="fas fa-code"></i>
 			</span>
 		</div>
-		<p class="lead">Built with the latest, HTML 5.</p>
+		<p class="lead">BdssssssssssssssssssssssssssssssssssssssssssHTML 5.</p>
 	</div>
 	</div>
 
